# hakogym

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
front/: package-lock.json  package.json
front/src/mock-server/: index.ts
proto/: aggrigated_change_broadcaster.proto  file_persistance.proto  pending_car_queue.proto  records.proto  running_observer.proto  service_manager.proto  timing-system.proto
resources/: config.json  package.json  run.bat  vlcrc
resources/proto/: timing-system.proto
resources/secrets/: .gitignore
scripts/: build.js  refresh-proto.sh  update-hakogym-db-schema.sh
service-manager/: Cargo.toml  build.rs
service-manager/resources/: config.json
service-manager/src/: main.rs
supabase/: config.toml
time-measurement-system/: Cargo.toml  build.rs
time-measurement-system-google-spreadsheet-sync/: package-lock.json  package.json  tsconfig.json
time-measurement-system-google-spreadsheet-sync/scripts/: gen-types.js
time-measurement-system-google-spreadsheet-sync/src/: main.ts
time-measurement-system-gui/: .eslintrc.cjs  index.html  package-lock.json  package.json  pending_car_queue.ts
time-measurement-system-gui/scripts/: gen-types.mjs
time-measurement-system-gui/src/: App.css  App.tsx  Router.tsx  api.ts
time-measurement-system-gui/src-tauri/: Cargo.toml  tauri.conf.json
time-measurement-system-gui/src-tauri/src/: main.rs
time-measurement-system-sensor-io/: Cargo.toml  build.rs
time-measurement-system-sensor-io/src/: main.rs
time-measurement-system-vlc-connection/: package-lock.json  package.json
time-measurement-system-vlc-connection/scripts/: gen-types.js
time-measurement-system-vlc-connection/src/: main.ts
time-measurement-system/resources/: config.json
time-measurement-system/src/: aggrigated_change_broadcaster.rs  config.rs  main.rs  pending_car_queue.rs  persistance.rs  proto.rs  records.rs  running_observer.rs
timing-system/: Cargo.toml  build.rs
timing-system-front/: package-lock.json  package.json
timing-system-front-gateway/: .lintstagedrc  .prettierrc  jest.config.js  package-lock.json  package.json  tsconfig.json
timing-system-front-gateway/scripts/: build.sh
timing-system-front-gateway/src/: command.ts  connection.ts  main.ts  resolvers.ts  schema.ts  utils.ts
timing-system-front-tauri/: index.html  package-lock.json  package.json  vite.config.ts
timing-system-front-tauri/src/: App.module.css  App.tsx  api.ts  command.ts  config.ts  hooks.ts  main.tsx  model.ts  store.ts  utils.ts
timing-system-front-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
timing-system-front/src/: api.ts  mock.ts
timing-system-google-spreadsheet-exporter/: package-lock.json  package.json  tsconfig.json
timing-system-google-spreadsheet-exporter/scripts/: build.js
timing-system-google-spreadsheet-exporter/src/: main.ts
timing-system-launcher/: .gitignore  package-lock.json  package.json  vite.config.ts
timing-system-launcher/src/: App.module.css  App.tsx  index.css  main.tsx
timing-system-launcher/src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
timing-system-server/: index.ts  package-lock.json  package.json  schema.ts  trpc.ts  tsconfig.json
timing-system-server/protos/: helloworld.ts
timing-system-server/src/: index.ts  queue.ts
timing-system-signal-io/: .gitignore  Cargo.toml  build.rs
timing-system-signal-io/src/: main.rs
timing-system-time-display/: package-lock.json  package.json
timing-system-time-display/src/: App.module.css  App.tsx  store.ts  styles.css  utils.ts
timing-system-time-display/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
timing-system-time-display/src-tauri/src/: main.rs
timing-system-vlc-controller/: .gitignore  package-lock.json  package.json  tsconfig.json
timing-system-vlc-controller/scripts/: build.js
timing-system-vlc-controller/src/: main.ts
timing-system/proto/: timing-system.proto
timing-system/scripts/: dev.sh
timing-system/src/: main.rs  server.rs
types/: build.js  package-lock.json  package.json  supabase.ts  tsconfig.json
types/src/: index.ts
(+88 files in other folders)
