[package]
name = "service-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
async-trait = "0.1.68"
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10.0"
jsonschema = "0.17.0"
log = "0.4.17"
nanoid = "0.4.0"
prost = "0.11.8"
prost-types = "0.11.8"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features=["full"] }
tokio-stream = "0.1.12"
tonic = "0.9.0"
tonic-reflection = "0.9.0"
tonic-web = "0.9.1"


[build-dependencies]
tonic-build = "0.9.0"
