[package]
name = "time-measurement-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
async-trait = "0.1.68"
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
nanoid = "0.4.0"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features=["full"] }
