[package]
name = "timing-system-signal-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-serial = "5.4.4"
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = "0.7.7"
tonic = "0.8.2"
prost = "0.11"
prost-types = "0.11"
bytes = "1.4.0"
futures = "0.3.27"

[build-dependencies]
tonic-build = "0.8.2"
