[package]
name = "timing-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.22"
thiserror = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
tonic = "0.8.2"
tonic-reflection = "0.5.0"
prost = "0.11"
prost-types = "0.11"

[build-dependencies]
tonic-build = "0.8.2"

