[package]
name = "timing-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.60"
chrono = { version = "0.4.22", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"
tonic = "0.8.2"
tonic-reflection = "0.5.0"
prost = "0.11"
prost-types = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.2.0"
h2 = "0.3"
nanoid = "0.4.0"

[build-dependencies]
tonic-build = "0.8.2"

